fixed nav overflow and sticky bug

--- a/src/styles/components/Navbar.scss
+++ b/src/styles/components/Navbar.scss
@@ -6,6 +6,7 @@
     box-shadow: 1px 2px 5px $grey;
     position: sticky;
     top: 0;
+    left: 0;
     background: white;
     z-index: 999;
 
@@ -17,7 +18,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 0 1.5rem;
+        padding: 0 1rem;
         position: relative;
 
         .menuBtn {
@@ -73,7 +74,7 @@
     .navbar .navbar-cont .nav {
         position: absolute;
         top: 100%;
-        left: 100%;
+        left: -100%;
         width: 100%;
         height: calc(100vh - 80px);
         flex-direction: column;
