--- a/src/styles/pages/Add.scss
+++ b/src/styles/pages/Add.scss
@@ -23,7 +23,7 @@
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    padding: 3rem 1.5rem;
+    padding: 3rem 1rem;
 
     .input {
       padding: 0.5rem;
