--- a/src/styles/pages/Seller.scss
+++ b/src/styles/pages/Seller.scss
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3rem 1.5rem;
+    padding: 3rem 1rem;
 
     .product-group {
       width: 100%;
