--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -5,7 +5,6 @@ html {
     scroll-behavior: smooth;
   }
 body {
-  overflow-x: hidden;
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
